tests/neg-custom-args/allow-deep-subtypes/matchtype-loop2.scala
object Test {
  type L[X] = X match {
    case Int => L[X]
  }
  type LL[X] = X match {
    case Int => LL[LL[X]]
  }
  val x: LL[Int] = 2   // error
}
